<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".FormPelaporan"
    tools:layout_editor_absoluteY="81dp">

    <CheckBox
        android:id="@+id/checkDll"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/dll_selector"
        android:button="@null"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="@+id/checkTaman"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/checkTaman"
        app:layout_constraintTop_toBottomOf="@+id/textKategori"
        app:layout_constraintVertical_bias="1.0" />

    <CheckBox
        android:id="@+id/checkTaman"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/plant_selector"
        android:button="@null"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="@+id/checkCubicle"
        app:layout_constraintEnd_toStartOf="@+id/checkDll"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/checkCubicle"
        app:layout_constraintTop_toBottomOf="@+id/textKategori"
        app:layout_constraintVertical_bias="1.0" />

    <CheckBox
        android:id="@+id/checkCubicle"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/cubicle_selector"
        android:button="@null"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="@+id/checkRumah"
        app:layout_constraintEnd_toStartOf="@+id/checkTaman"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/checkRumah"
        app:layout_constraintTop_toBottomOf="@+id/textKategori"
        app:layout_constraintVertical_bias="1.0" />

    <CheckBox
        android:id="@+id/checkRumah"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rumah_selector"
        android:button="@null"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="@+id/checkPerangkat"
        app:layout_constraintEnd_toStartOf="@+id/checkCubicle"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/checkPerangkat"
        app:layout_constraintTop_toBottomOf="@+id/textKategori"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/updatePict"
        android:layout_width="330dp"
        android:layout_height="180dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/btnSubmit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:srcCompat="@drawable/add_image" />

    <TextView
        android:id="@+id/textKategori"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/kategori"
        android:textColor="@android:color/darker_gray"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textDeskripsi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="Deskripsi "
        android:textColor="@android:color/darker_gray"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/garis1" />

    <EditText
        android:id="@+id/editDeskripsi"
        android:layout_width="352dp"
        android:layout_height="98dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:gravity="start"
        android:inputType="textMultiLine"
        android:textColor="@color/colorPrimary"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDeskripsi" />

    <View
        android:id="@+id/garis1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kategori" />

    <View
        android:id="@+id/garis2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editDeskripsi" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/upload_gambar"
        android:textColor="@android:color/darker_gray"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/garis2" />

    <TextView
        android:id="@+id/kategori"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkMobil" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="384dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/submit"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/checkMobil"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/car_selector"
        android:button="@null"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toStartOf="@+id/checkPerangkat"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textKategori" />

    <CheckBox
        android:id="@+id/checkPerangkat"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/perangkat_selector"
        android:button="@null"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="@+id/checkMobil"
        app:layout_constraintEnd_toStartOf="@+id/checkRumah"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/checkMobil"
        app:layout_constraintTop_toBottomOf="@+id/textKategori"
        app:layout_constraintVertical_bias="1.0" />

</android.support.constraint.ConstraintLayout>